test/functions/deitz/test_var_function_access.good
Error: Assigning to a constant expression (test_var_function_access.chpl:6)
